src/objects/DataTrigger__c.object
<CustomObject>
    <description>A definition of what kind of trigger exists on the related Data Object, when it fires, and what it does.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of that this trigger is and how it is used.</description>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Defines the event this trigger fires on against the Data Object.</description>
        <inlineHelpText>Defines the event this trigger fires on against the Data Object.</inlineHelpText>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Before Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each Row</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FutureCalls__c</fullName>
        <description>The count of potential future calls that could be directly set off by this trigger.</description>
        <inlineHelpText>The count of potential future calls that could be directly set off by this trigger.</inlineHelpText>
        <label>Future Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <description>The Data Object to which is trigger fires from.</description>
        <inlineHelpText>The Data Object to which is trigger fires from.</inlineHelpText>
        <label>Parent Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Data Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Triggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>